@@ -86,13 +86,11 @@ char *TEST_SERVICE_DESCRIPTION =
 "  <serviceStateTable>\n"
 "    <stateVariable>\n"
 "      <name>Target</name>\n"
-"      <sendEventsAttribute>no</sendEventsAttribute>\n"
 "      <dataType>boolean</dataType>\n"
 "      <defaultValue>0</defaultValue>\n"
 "    </stateVariable>\n"
-"    <stateVariable>\n"
+"    <stateVariable sendEvents=\"yes\">\n"
 "      <name>Status</name>\n"
-"      <sendEventsAttribute>yes</sendEventsAttribute>\n"
 "      <dataType>boolean</dataType>\n"
 "      <defaultValue>0</defaultValue>\n"
 "    </stateVariable>\n"
