@@ -4,7 +4,8 @@
 	* Disabled libxml2 and libcurl as default in confugre.in.
 	* Added support for SO_NOSIGPIPES.
 	* Fixed some errors to compile normally on Ubuntu 9.10.
-
+	* Changed CG_USE_WIN32_GETHOSTADDRESSES flag as default for Windows platform.
+	
 2010-01-20  Satoshi Konno <skonno@cybergarage.org>
 	* Removed service mutex control from cg_upnp_service_addsubscriber() to avoid deadlock.
 
